[workspace]

members = ["luct-client", "luct-core", "luct-server", "luct-scanner"]

resolver = "2"

[workspace.package]
authors = ["Leon Tan"]
edition = "2024"
version = "0.0.0"
readme = "./README.md"
publish = true
categories = []
keywords = []
license = "MIT OR Apache-2.0"

[workspace.dependencies]


serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
toml = { version = "0.8" }
base64 = { version = "0.22" }

p256 = { version = "0.13" }
digest = { version = "0.10" }
sha2 = { version = "0.10" }
x509-cert = { version = "0.2" }
x509-verify = { version = "0.4" }

url = { version = "2", features = ["serde"] }

thiserror = { version = "2" }
