[workspace]

members = [
    "luct",
    "luct-client",
    "luct-core",
    "luct-server",
    "luct-scanner",
    "luct-store",
]

resolver = "2"

[workspace.package]
authors = ["Leon Tan"]
edition = "2024"
version = "0.0.0"
readme = "./README.md"
publish = true
categories = []
keywords = []
license = "MIT OR Apache-2.0"

[workspace.dependencies]

# Serialization
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3" }
serde_json = { version = "1" }
toml = { version = "0.9" }
base64 = { version = "0.22" }
hex = { version = "0.4" }

# Cryptography
p256 = { version = "0.13" }
digest = { version = "0.10" }
sha2 = { version = "0.10" }
x509-cert = { version = "0.2" }
x509-verify = { version = "0.4", features = ["x509"] }

rustls = { version = "0.23", default-features = false }
rustls-platform-verifier = { version = "0.6" }
rustls-rustcrypto = { version = "0.0.2-alpha" }

# HTTP 
url = { version = "2", features = ["serde"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }

# Utilities
clap = { version = "4", features = ["derive"] }
eyre = { version = "0.6" }
thiserror = { version = "2" }

log = { version = "0.4" }
env_logger = { version = "0.11" }
tracing = { version = "0.1", features = ["log"] }

itertools = { version = "0.14" }

# Async
tokio = { version = "1" }
futures = { version = "0.3" }
