[workspace]

members = [
    "luct",
    "luct-client",
    "luct-core",
    "luct-node",
    "luct-server",
    "luct-scanner",
    "luct-store",
    "luct-extension/luct-extension",
    "otlsp-client",
    "otlsp-server",
]

resolver = "2"

[workspace.package]
authors = ["Leon Tan"]
edition = "2024"
version = "0.0.0"
readme = "./README.md"
publish = true
categories = []
keywords = []
license = "MIT OR Apache-2.0"

[workspace.dependencies]

# Serialization
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3" }
serde_json = { version = "1" }
serde-wasm-bindgen = { version = "0.6" }
base64 = { version = "0.22" }
hex = { version = "0.4" }
toml = { version = "0.9", default-features = false }

# Cryptography
p256 = { version = "0.13" }
digest = { version = "0.11" }
sha2 = { version = "0.11" }
x509-cert = { version = "0.2" }
x509-verify = { version = "0.4", features = ["x509"] }
const-oid = { version = "0.9", features = ["db"] }

rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-platform-verifier = { version = "0.6", default-features = false }
rustls-rustcrypto = { version = "0.0.2-alpha", default-features = false, features = [
    "alloc",
] }
webpki-roots = { version = "1" }

# HTTP 
url = { version = "2", features = ["serde"] }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls-no-provider",
    "query",
    "gzip",
] }
hyper = { version = "1", default-features = false, features = [
    "client",
    "http1",
] }
hyper-util = { version = "0.1", default-features = false, features = [
    #"client",
    #"client-legacy",
] }
http-body-util = { version = "0.1" }
axum = { version = "0.8", features = ["ws"] }
axum-macros = { version = "0.5" }

# Utilities
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
dotenv = { version = "0.15" }
eyre = { version = "0.6" }
thiserror = { version = "2" }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.10", features = ["chacha"] }
async-oneshot = { version = "0.5" }
itertools = { version = "0.14" }
lru = { version = "0.16" }

# Observability
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-wasm = { version = "0.2" }

# Async
tokio = { version = "1" }
futures = { version = "0.3" }

# WASM
# NOTE: When updating wasm-bindgen, we also need to update the tool in CI
wasm-bindgen = { version = "0.2.117" }
wasm-bindgen-futures = { version = "0.4" }
wasm-bindgen-test = { version = "0.3" }
web-time = { version = "1.1" }
console_error_panic_hook = { version = "0.1" }
js-sys = { version = "0.3" }
web-sys = { version = "0.3", features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
] }
