[package]
name = "luct-client"
description = "Client library to fetch and validate certificate transparency logs"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }


[dependencies]
luct-core = { path = "../luct-core" }

reqwest = { workspace = true, optional = true }
url = { workspace = true }

serde = { workspace = true }

thiserror = { workspace = true }


[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
