[package]
name = "luct-core"
description = "Core types and parsers for certificate transparency"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

base64 = { workspace = true }
url = { workspace = true }

thiserror = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
