[package]
name = "luct-core"
description = "Core types and parsers for certificate transparency"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }

p256 = { workspace = true, features = ["pkcs8"] }
digest = { workspace = true }
sha2 = { workspace = true }
x509-cert = { workspace = true }
x509-verify = { workspace = true }
const-oid = { workspace = true }

thiserror = { workspace = true }
itertools = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
