[package]
name = "luct-node"
description = "All-in-one server component for the luct project"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]

serde = { workspace = true }
toml = { workspace = true }

clap = { workspace = true, features = ["derive"] }
config = { workspace = true }
eyre = { workspace = true }
dotenv = { workspace = true }

tokio = { workspace = true, features = ["rt", "macros"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
