[package]
name = "luct-node"
description = "All-in-one server component for the luct project"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
luct-core = { path = "../luct-core" }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

clap = { workspace = true, features = ["derive"] }
config = { workspace = true }
eyre = { workspace = true }
dotenv = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
url = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
