[package]
name = "luct-otlsp"
description = "Luct client implementation using oblivious TLS client"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
luct-client = { path = "../luct-client" }
otlsp-client = { path = "../otlsp-client" }

hyper = { workspace = true }
url = { workspace = true }
http-body-util = { workspace = true }

futures = { workspace = true }

tracing = { workspace = true }

web-time = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
tracing-wasm = { workspace = true }
