[package]
name = "luct-otlsp"
description = "Luct client implementation using oblivious TLS client"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
luct-client = { version = "0.2.0", path = "../luct-client" }
otlsp-client = { version = "0.2.0", path = "../otlsp-client" }

hyper = { workspace = true }
url = { workspace = true }
http-body-util = { workspace = true }

derive_builder = { workspace = true }

futures = { workspace = true }
tracing = { workspace = true }
web-time = { workspace = true }

[dev-dependencies]
luct-core = { version = "0.2.0", path = "../luct-core" }
luct-test = { version = "0.2.0", path = "../luct-test" }

tokio = { workspace = true, features = ["rt", "macros"] }
wasm-bindgen-test = { workspace = true }

tracing-subscriber = { workspace = true }
tracing-wasm = { workspace = true }

serde_json = { workspace = true }
