[package]
name = "luct-scanner"
description = "Tool to provide additional checks on TLS certificates"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
luct-core = { path = "../luct-core" }
luct-client = { path = "../luct-client" }

serde = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }

futures = { workspace = true }

[features]
default = []
