[package]
name = "luct-scanner"
description = "Tool to provide additional checks on TLS certificates"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
luct-core = { path = "../luct-core" }
luct-client = { path = "../luct-client" }
luct-store = { path = "../luct-store" }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }

tracing = { workspace = true }

web-time = { workspace = true }

[features]
default = []
