[package]
name = "luct-scanner"
description = "Tool to provide additional checks on TLS certificates"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
luct-core = { version = "0.1.0", path = "../luct-core" }
luct-client = { version = "0.1.0", path = "../luct-client" }
luct-store = { version = "0.1.0", path = "../luct-store" }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }

tracing = { workspace = true }

derive_builder = { workspace = true }
web-time = { workspace = true }
url = { workspace = true }

[features]
default = []
