[package]
name = "luct-store"
description = "Collection of storage backends for the luct project"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
luct-core = { path = "../luct-core" }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

hex = { workspace = true }

[features]
default = ["filesystem"]
filesystem = ["dep:serde", "dep:serde_json"]
