[package]
name = "luct-store"
description = "Collection of storage backends for the luct project"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
luct-core = { version = "0.2.0", path = "../luct-core" }

serde = { workspace = true }
serde_json = { workspace = true }

hex = { workspace = true }
tracing = { workspace = true }

lru = { workspace = true }

[dev-dependencies]
luct-test = { version = "0.2.0", path = "../luct-test" }

tempfile = { workspace = true }

[features]
#default = ["filesystem"]
#filesystem = ["dep:serde", "dep:serde_json"]
