[package]
name = "luct-test"
description = "Test functionality used throughout the luct proces"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
luct-core = { version = "0.2.0", path = "../luct-core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
tracing-wasm = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
