[package]
name = "luct"
description = "Comand line utility of the luct project"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }


[dependencies]
luct-core = { path = "../luct-core" }

rustls = { workspace = true }
rustls-platform-verifier = { workspace = true }
rustls-rustcrypto = { workspace = true }

tokio = { workspace = true, features = ["rt", "macros"] }

clap = { workspace = true, features = ["derive"] }
eyre = { workspace = true }
tracing = { workspace = true }
