[package]
name = "luct"
description = "Comand line utility of the luct project"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
luct-core = { version = "0.2.0", path = "../luct-core" }
luct-client = { version = "0.2.0", path = "../luct-client" }
luct-otlsp = { version = "0.2.0", path = "../luct-otlsp" }
luct-scanner = { version = "0.2.0", path = "../luct-scanner" }
luct-store = { version = "0.2.0", path = "../luct-store" }

serde_json = { workspace = true }

rustls = { workspace = true }
rustls-platform-verifier = { workspace = true }
rustls-rustcrypto = { workspace = true }

url = { workspace = true }

clap = { workspace = true, features = ["derive"] }
eyre = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tokio = { workspace = true, features = ["rt", "macros"] }
