[package]
name = "otlsp-client"
description = "Oblivious TLS proxy client"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
# HTTP
hyper = { workspace = true }
hyper-util = { workspace = true }

url = { workspace = true }
http-body-util = { workspace = true }

# Crypto
rustls = { workspace = true }
rustls-rustcrypto = { workspace = true }
webpki-roots = { workspace = true }

# Async
futures = { workspace = true }
tower = { workspace = true }

# Util
thiserror = { workspace = true }

# Wasm
web-sys = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }

# This needs to be imported here to set the "js" feature,
# otherwise the crate would not compile to wasm
getrandom = { version = "0.2", features = ["js"] }

rustls-pki-types = { version = "1", default-features = false, features = [
    "web",
] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
