[package]
name = "otlsp-client"
description = "Oblivious TLS proxy client"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
otlsp-core = { version = "0.1.0", path = "../otlsp-core" }

# HTTP
hyper = { workspace = true }

url = { workspace = true }

# Crypto
rustls = { workspace = true }
rustls-rustcrypto = { workspace = true }
webpki-roots = { workspace = true }
x509-cert = { workspace = true }

# Async
futures = { workspace = true }

# Util
thiserror = { workspace = true }
tracing = { workspace = true }

rustls-pki-types = { version = "1", default-features = false, features = [
    "web",
] }

# Wasm
web-sys = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

# This needs to be imported here to set the "js" feature,
# otherwise the crate would not compile to wasm
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
tokio = { workspace = true }
tungstenite = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
luct-test = { version = "0.1.0", path = "../luct-test" }

wasm-bindgen-test = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

http-body-util = { workspace = true }

tracing-wasm = { workspace = true }
tracing-subscriber = { workspace = true }
