[package]
name = "otlsp-core"
description = "Core library of shared structures for OTLSP"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
