[package]
name = "otlsp-server"
description = "Oblivious TLS proxy server"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
clap = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true }
pretty_env_logger = { workspace = true }
