[package]
name = "otlsp-server"
description = "Oblivious TLS proxy server"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
otlsp-core = { version = "0.1.0", path = "../otlsp-core" }

serde = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

tracing = { workspace = true }
