[package]
name = "luct-extension"
description = "Core types and parsers for certificate transparency"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
luct-scanner = { path = "../../luct-scanner" }
luct-store = { path = "../../luct-store" }

wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }

getrandom = { version = "0.2", features = ["js"] }
