[package]
name = "luct-extension"
description = "Core types and parsers for certificate transparency"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
luct-core = { path = "../../luct-core" }
luct-scanner = { path = "../../luct-scanner" }
luct-client = { path = "../../luct-client" }
luct-store = { path = "../../luct-store" }

serde_json = { workspace = true }
url = { workspace = true }

wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Storage',
    'Window',
] }

# This needs to be imported here to set the "js" feature,
# otherwise the crate would not compile to wasm
getrandom = { version = "0.2", features = ["js"] }

tracing = { workspace = true }
tracing-wasm = { workspace = true }
